# gpt-bitcoin

./: .env.example  .gitignore  Dockerfile  README.MD  autotrade.py  autotrade_v2.py  autotrade_v3.py  backtest_v3.py  docker-compose.yml  fix_tab4.txt  instructions.md  instructions_v2.md  instructions_v3.md  main.py  pyproject.toml  requirements.txt  web-ui.bat  web_ui.backup.py  web_ui.py
.claude/: settings.json  settings.local.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.claude/skills/moai-workflow-thinking/: SKILL.md
.github/workflows/: ci.yml
.moai/: manifest.json  status_line.sh
.moai/config/sections/: llm.yaml  project.yaml  system.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: sync-2026-03-07.md
.moai/specs/: MASTER-IMPLEMENTATION-PLAN.md
.moai/specs/SPEC-MODERNIZE-001/: acceptance.md  phase6-execution-plan.md  plan.md  spec.md
.moai/specs/SPEC-REFACTOR-PYTHON-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-001/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-TRADING-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-003/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-004/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-TRADING-005/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-TRADING-006/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-007/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-008/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-009/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRADING-010/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UPDATE-AI-001/: acceptance.md  plan.md  progress.md  spec.md
.openchrome/hints/: hints-2026-03-05.jsonl
.openchrome/timeline/: timeline-2026-03-05.jsonl
MagicMock/mock.profile_db_path/: 2527102288624
docs/: api-documentation.md  architecture-overview.md  operations-guide.md
instructions/: base.md
instructions/coin_specific/BTC/: balanced.md  conservative.md
instructions/coin_specific/ETH/: aggressive.md
instructions/current/: aggressive.md  balanced.md  conservative.md  vision_aggressive.md
legacy/: autotrade.py  autotrade_v2.py  autotrade_v3.py  streamlit_app.py
monitoring/: alertmanager.yml  prometheus.yml
monitoring/alerting/: rules.yml
monitoring/dashboards/: trading-overview.json
monitoring/provisioning/dashboards/: dashboards.yml
monitoring/provisioning/datasources/: prometheus.yml
src/gpt_bitcoin/: __init__.py
src/gpt_bitcoin/application/: __init__.py  coin_manager.py  cost_optimization.py  instruction_template.py  scheduler.py  strategy_manager.py
src/gpt_bitcoin/config/: __init__.py  settings.py
src/gpt_bitcoin/dependencies/: __init__.py  container.py
src/gpt_bitcoin/domain/: __init__.py  analytics.py  audit.py  backup.py  notification.py  security.py  testnet_config.py  trade_history.py  trading.py  trading_mode.py  trading_state.py  user_profile.py
src/gpt_bitcoin/infrastructure/: __init__.py  exceptions.py
src/gpt_bitcoin/presentation/: __init__.py  alert_handlers.py
src/gpt_bitcoin/web_ui/: __init__.py  charts.py  dashboard.py
tests/: conftest.py
tests/characterization/: __init__.py  test_autotrade_v1.py  test_autotrade_v2.py  test_autotrade_v3.py
tests/infrastructure/observability/: test_tracing.py
tests/integration/: test_dual_provider_integration.py  test_trade_history_integration.py
tests/integration/database/: test_preferences_repository.py
tests/integration/monitoring/: __init__.py  test_alertmanager.py  test_grafana_setup.py  test_webhook_handler.py
tests/unit/: test_cli_trading.py
tests/unit/application/: __init__.py  test_coin_manager.py  test_cost_optimization.py  test_scheduler.py  test_strategy_manager.py
tests/unit/config/: test_config.py  test_settings.py
tests/unit/dependencies/: test_container.py  (+1 more)
(+80 files in other folders)
