[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt-bitcoin"
version = "4.0.0"
description = "GPT-powered Bitcoin auto-trading system with modern Python architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "JoCoding", email = "jocoding@example.com"},
]
keywords = ["bitcoin", "trading", "gpt", "upbit", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "zhipuai>=2.0.0",
    "openai>=1.0.0",
    "pyupbit>=0.2.0",
    "pyjwt>=2.8.0",
    "pandas>=2.0.0",
    # "pandas-ta>=0.3.14b0",  # Python 3.14 호환성 문제로 일시 제거
    "schedule>=1.2.0",
    "streamlit>=1.28.0",
    "selenium>=4.15.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0",
]

[project.scripts]
gpt-bitcoin = "gpt_bitcoin.cli:main"

[project.urls]
Homepage = "https://github.com/youtube-jocoding/gpt-bitcoin"
Repository = "https://github.com/youtube-jocoding/gpt-bitcoin"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_bitcoin"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
]

[tool.ruff.isort]
known-first-party = ["gpt_bitcoin"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]
"src/gpt_bitcoin/dependencies/container.py" = ["ERA001"]  # MX tag comments
"web_ui.py" = ["SIM108"]  # if-else blocks preferred for clarity in async context

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "characterization: marks tests as characterization tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/gpt_bitcoin"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 85
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"
